0027275: Unused formal parameter in BSplCLib::EvalBsplineBasis

Unused formal parameter is deleted.