src/FairCurve/FairCurve_DistributionOfJerk.cxx
@@ -60,7 +60,7 @@ Standard_Boolean FairCurve_DistributionOfJerk::Value(const math_Vector& TParam,
                                            // Dans EvalBsplineBasis C"' <=> DerivOrder = 4
                                            // et il faut ajouter 1 rang dans la matrice Base => 5 rangs
    
-  ier  =  BSplCLib::EvalBsplineBasis(1, 3,  MyBSplOrder, 
+  ier  =  BSplCLib::EvalBsplineBasis(3,  MyBSplOrder, 
                                      MyFlatKnots->Array1(), TParam(TParam.Lower()),
                                      FirstNonZero, Base );
   if (ier != 0) return Standard_False;
